# libselftest

./: CMakeLists.txt  README.md  library.h  selftest.cpp  sha256.cpp
include/libselftest/: selftest.h  sha256.h
libselftest/: selftest.cpp  sha256.cpp
